[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "vision_agent"
version = "0.1.0"
description = ""
authors = ["chasangho415 <rabbit3274@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
altgraph = "^0.17.4"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
packaging = "^24.2"
pefile = "^2023.2.7"
pyinstaller = "^6.11.1"
pyinstaller-hooks-contrib = "^2024.10"
PyQt6 = "^6.7.1"
PyQt6-Qt6 = "^6.7.3"
PyQt6_sip = "^13.8.0"
pywin32-ctypes = "^0.2.3"
setuptools = "^75.5.0"